--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,24 @@
     flex-direction: column;
 }
 
+.container-about{
+  justify-content: center;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #FFF;
+  display: grid;
+}
+
 .header{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #FFF;
+  background-color: #f1f1f1;
   width: 100%;
   border-radius: 0 18px;
   border: 5px solid transparent;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+  
 }
 
 .header-button{
@@ -68,6 +77,14 @@
       flex-direction: column;
       
     }
+
+    .imagem01{
+      width: 150%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      position: relative;     
+    }
 }
 
 .computing01{
@@ -82,10 +99,11 @@
 }
 
 .imagem01{
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: center;
   margin-left: 15px;
+  margin-top: 20px;
 }
 
 .projetos{
@@ -111,6 +129,7 @@
       display: flex;
       justify-content: center;
       flex-direction: column;
+      margin-top: 155px;
       
     }
 }
@@ -120,6 +139,8 @@
   border: 5px solid transparent;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
   margin-right: 15px;
+  
+  
 }
 
 .projeto02{
@@ -149,5 +170,58 @@
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
   margin-right: 15px;
 }
+
+::-webkit-scrollbar{
+  width: 8px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #888;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: #555;
+}
+
+.button-barber{
+  display: inline-block;
+  margin-right: 5px;
+  margin-top: 10px;
+  font-size: 15px;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: center;
+  border: 5px;
+}
+
+.button-barber-github{
+  display: inline-block;
+  font-size: 15px;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: center;
+  margin-top: 10px;
+  border: 5px;
+}
+
+.button-barber:hover{
+  border: 0 solid transparent;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.button-barber-github:hover{
+  border: 0 solid transparent;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+
+
 
 
