--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
 .container{
     max-width: 1440px;
+    width: 100%;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: column;   
 }
 
 .container-about{
   justify-content: center;
   position: relative;
   flex-direction: column;
-  justify-content: center;
   background-color: #FFF;
-  display: grid;
+  display: flex;
 }
 
 .header{
@@ -69,7 +69,16 @@
   
 }
 
-@media (max-width: 500px){
+@media screen and (max-width: 768px){
+
+  .container-about{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 200px;
+    width: 100%;
+    overflow: hidden;  
+  }
     .about{
       width: 50%;
       display: flex;
@@ -83,8 +92,40 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      position: relative;     
+      position: relative; 
     }
+
+    .container{
+      font-size: 12px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+     }
+
+    .header-button{
+      font-size: 10px;
+      flex-direction: column;
+      align-items: baseline;
+      justify-content: center;
+    }
+
+    .header{
+      display: flex;
+      position: relative;
+      width: 100%;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .computing01{
+      width: 100%;
+      position: relative;
+      margin-left: 210px;
+    }
+   
+    
+    
 }
 
 .computing01{
@@ -121,15 +162,17 @@
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 10px;
   
+  
 }
 
-@media (max-width: 500px){
+@media screen and (max-width: 768px){
     .projetos{
       width: 50%;
-      display: flex;
+      display: grid;
       justify-content: center;
       flex-direction: column;
-      margin-top: 155px;
+      margin-top: 30px;
+      
       
     }
 }
@@ -219,6 +262,53 @@
   border: 0 solid transparent;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
   cursor: pointer;
+}
+
+.container-footer{
+  background-color: #555;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 8px 8px 0 0;
+  gap: 14px;
+  margin: 0;
+}
+
+.footer-contact{
+  margin-top: 15px;
+}
+
+.footer-text{
+  margin-bottom: 15px;
+}
+
+.logo-footer{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin-right: 15px;
+}
+
+@media screen and (max-width: 768px){
+  
+  
+  
+  .container-footer{
+      
+      
+      position: relative;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 1000px;
+      
+      
+      
+    }
+
 }
 
 
