--- a/src/App.css
+++ b/src/App.css
@@ -265,6 +265,7 @@
 }
 
 .container-footer{
+  position: relative;
   background-color: #555;
   display: flex;
   align-items: center;
@@ -273,6 +274,7 @@
   border-radius: 8px 8px 0 0;
   gap: 14px;
   margin: 0;
+ 
 }
 
 .footer-contact{
@@ -293,20 +295,12 @@
 
 @media screen and (max-width: 768px){
   
-  
-  
   .container-footer{
-      
-      
       position: relative;
       width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 1000px;
-      
-      
-      
+      bottom: 0;
+      left: 0;
+      transform: translateY(calc(600%));
     }
 
 }
