--- a/src/App.css
+++ b/src/App.css
@@ -301,9 +301,10 @@
       bottom: 0;
       left: 0;
       transform: translateY(calc(600%));
+      margin-top: 30px;
     }
 
-    .projetos{
+    .projeto05{
       margin-bottom: 50px;
     }
 
