--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,10 @@
       display: flex;
       justify-content: center;
       flex-direction: column;
-      
+      border-radius: 8px;
+      border: 5px solid transparent;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+          
     }
 
     .imagem01{
