--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,13 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    background-color: #FFF;   
+    background-color: #FFF;  
 }
 
 .container-about{
   justify-content: center;
   position: relative;
+  align-items: center;
   flex-direction: column;
   background-color: #FFF;
   display: flex;
@@ -55,11 +56,10 @@
 
 .about{
   
-  justify-content: space-between;
+  
   padding: 3%;
   width: 50%;
   margin-top: 150px;
-  margin-left: 45%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -76,7 +76,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: 200px;
+    align-items: center;
     width: 100%;
     overflow: hidden;
     background-color: #FFF;  
@@ -97,7 +97,8 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      position: relative; 
+      align-items: center;
+      margin-top: 50px;
     }
 
     .container{
@@ -131,9 +132,9 @@
     }
 
     .computing01{
-      width: 100%;
+      width: 150%;
       position: relative;
-      margin-left: 210px;
+      
     }
    
     
@@ -152,16 +153,16 @@
 }
 
 .imagem01{
-  display: grid;
+  display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 15px;
-  margin-top: 20px;
+  align-items: center;
+  margin-top: 50px;
 }
 
 .projetos{
   
-  justify-content: center;
+
   width: 90vw;
   height: 50vh;
   margin: 50px 50px 50px 50px;
@@ -172,8 +173,7 @@
   background-color: #FFF;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 10px;
-  
+  grid-gap: 10px; 
   
 }
 
@@ -194,35 +194,10 @@
   margin-right: 15px;
   
   
+  
 }
 
-.projeto02{
-  border-radius: 8px;
-  border: 5px solid transparent;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
-  margin-right: 15px;
-}
 
-.projeto03{
-  border-radius: 8px;
-  border: 5px solid transparent;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
-  margin-right: 15px;
-}
-
-.projeto04{
-  border-radius: 8px;
-  border: 5px solid transparent;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
-  margin-right: 15px;
-}
-
-.projeto05{
-  border-radius: 8px;
-  border: 5px solid transparent;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
-  margin-right: 15px;
-}
 
 ::-webkit-scrollbar{
   width: 8px;
@@ -284,6 +259,7 @@
   border-radius: 8px 8px 0 0;
   gap: 14px;
   margin: 0;
+  margin-top: 15px;
  
 }
 
@@ -339,8 +315,8 @@
       width: 100%;
       bottom: 0;
       left: 0;
-      transform: translateY(calc(600%));
-      margin-top: 60px;
+      transform: translateY(calc(550%));
+      
     }
 
     
