--- a/src/App.css
+++ b/src/App.css
@@ -162,17 +162,16 @@
 
 .projetos{
   
-
+  display: flex;
   width: 90vw;
   height: 50vh;
   margin: 50px 50px 50px 50px;
-  padding: 3%;
+  padding: 5px 5px;
   position: relative;
-  flex-direction: column;
-  justify-content: center;
-  background-color: #FFF;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  flex-direction: row;
+  justify-content: center;    
+  background-color: #FFF; 
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
   grid-gap: 10px; 
   
 }
@@ -189,6 +188,8 @@
 
 .projeto01{
   border-radius: 8px;
+  max-width: 300px;
+  text-align: center;
   border: 5px solid transparent;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
   margin-right: 15px;
@@ -315,7 +316,7 @@
       width: 100%;
       bottom: 0;
       left: 0;
-      transform: translateY(calc(600%));
+      margin-top: 205px;
       
     }
 
