--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,7 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
+      font-size: 18px;
       
      }
 
@@ -115,6 +116,7 @@
       flex-direction: column;
       align-items: baseline;
       justify-content: center;
+      font-size: 18px;
     }
 
     .header-button:hover{
@@ -129,6 +131,7 @@
       width: 100%;
       flex-direction: column;
       justify-content: center;
+      
     }
 
     .computing01{
@@ -193,6 +196,7 @@
   border: 5px solid transparent;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
   margin-right: 15px;
+  
   
   
   
@@ -316,7 +320,7 @@
       width: 100%;
       bottom: 0;
       left: 0;
-      margin-top: 430px;
+      margin-top: 780px;
       
     }
 
