--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@
       font-size: 10px;
       flex-direction: column;
       align-items: baseline;
-      justify-content: center;
+      justify-content: space-between;
       font-size: 18px;
     }
 
