--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,7 @@
   justify-content: space-between;
   background-color: #f1f1f1;
   width: 100%;
-  border-radius: 0 18px;
-  border: 5px solid transparent;
+  border-radius: 0 0 18px 18px;  
   
 }
 
@@ -47,10 +46,12 @@
 
 
 
+
+
 .logo{
   width: 65px;
   height: 65px;
-  margin-left: 15px;
+  margin-left: 35px;
   position: relative;
 }
 
@@ -116,7 +117,9 @@
       flex-direction: column;
       align-items: baseline;
       justify-content: space-between;
-      font-size: 10px;
+      font-size: 12px;
+
+      
     }
 
     .header-button:hover{
@@ -168,7 +171,7 @@
   display: flex;
   width: 90vw;
   height: 50vh;
-  margin: 50px 50px 50px 50px;
+  margin: 50px 50px 300px 50px;
   padding: 5px 5px;
   position: relative;
   flex-direction: row;
@@ -187,6 +190,14 @@
       flex-direction: column;
       margin-top: 30px;
     }
+
+    .header{
+      align-items: center;
+      text-align: center;
+      justify-content: center;
+    }
+
+    
 }
 
 .projeto01{
@@ -264,7 +275,7 @@
   border-radius: 8px 8px 0 0;
   gap: 14px;
   margin: 0;
-  margin-top: 15px;
+  margin-top: 35px;
  
 }
 
